# i2pfinal

./: .gitignore
project/: CMakeLists.sync-conflict-20201221-005453-GZ5B6XW.txt  CMakeLists.txt  c_cpp_properties.json  c_cpp_properties.sync-conflict-20201221-005450-GZ5B6XW.json  finalproject  launch.json  launch.sync-conflict-20201221-005420-GZ5B6XW.json  log.txt  save.txt  tasks.json  tasks.sync-conflict-20201221-005437-GZ5B6XW.json
project/allegro/lib/: liballegro_main.so.5.2.6  liballegro_memfile.so.5.2.6  liballegro_primitives.so.5.2.6
project/allegro/usr/local/lib/: liballegro_acodec.so.5.2.6  liballegro_audio.so.5.2.6  liballegro_color.so.5.2.6  liballegro_dialog.so.5.2.6  liballegro_font.so.5.2.6  liballegro_image.so.5.2.6  liballegro_ttf.so.5.2.6
project/include/: game.h  scene_gameover.h  shared.h  utility.h
project/src/: game.c  main.c  scene_gameover.c  scene_menu.c  scene_settings.c  scene_start.c  shared.c  utility.c
